nearby button toggle active

--- a/src/scss/pages/map.scss
+++ b/src/scss/pages/map.scss
@@ -1060,7 +1060,7 @@
                     margin-right: .6125rem;
                 }
 
-                &:hover {
+                &:hover,&.active {
                     background-color: $color-green;
                     box-shadow: none;
                     color: $color-white;
