--- a/src/scss/base/base.scss
+++ b/src/scss/base/base.scss
@@ -27,32 +27,33 @@
     padding-left: 0px
 }
 .ptb-150{
-    padding:150px 0;
+    padding:120px 0;
 }
 .mtb-100{
     margin:100px 0;
 }
 
 .pt-150{
-    padding-top:150px;
+    padding-top:120px;
 }
 .pb-150{
-    padding-bottom:150px;
+    padding-bottom:120px;
 }
 
 .mt-150{
-    margin-top:150px;
+    margin-top:120px;
 }
 .mb-150{
-    margin-bottom:150px;
+    margin-bottom:120px;
 }
 
 h3.openspace-title {
     text-transform: uppercase;
-    font-size: 2.5rem;
+    font-size: 2.2rem;
     font-weight: 800;
     color:$color-blue;
-    line-height: 3.5rem;
+    line-height: 3rem;
+    margin:0;
 }
 .flex{
     @include flex;
@@ -129,10 +130,10 @@ section{
     color:$color-secondary;
 }
 
-@media screen and (max-width:1540px){
+@media screen and (max-width:1640px){
     h3.openspace-title {
-        font-size: 2.3rem;
-        line-height: 3rem;
+        font-size: 2.2rem;
+        line-height: 1.2;
     }
 }
 @media screen and (max-width:$lg-tab){
