--- a/src/scss/base/typography.scss
+++ b/src/scss/base/typography.scss
@@ -40,7 +40,7 @@
  body {
      margin: 0;
      font-family: $openSanse;
-     font-size: 1rem;
+     font-size: .875rem;
      font-weight: 400;
      line-height: 1.5;
      color: $color-primary;
