--- a/src/scss/layout/footer.scss
+++ b/src/scss/layout/footer.scss
@@ -2,6 +2,7 @@ footer {
     background-position: 50% 0% !important;
     .footer-top{
         text-align: center;
+        margin-top:2rem;
         
         button{
             text-transform: uppercase;
@@ -22,6 +23,7 @@ footer {
                 p{
                     color:$primary-light;
                     font-size:.875rem;
+                    line-height: 1.8;
                 }
                 .footer-logos{
                     @include flexBetween;
@@ -41,6 +43,7 @@ footer {
                         color:$primary-light;
                         margin:0;
                         font-size:.875rem;
+                        line-height: 1.8;
                         a{
                             color:$primary-light;
                             font-size:.875rem;
@@ -70,7 +73,7 @@ footer {
                         span{
                             color:$primary-light;
                             font-size:.875rem;
-                        }
+                            line-height: 1.8;                        }
                         &:last-child{
                             margin-bottom: 0;
                         }
@@ -94,6 +97,9 @@ footer {
                             color:$color-blue;
                             text-transform: uppercase;
                             font-weight: 600;
+                            &:hover{
+                                color:$color-green;
+                            }
                         }
                         &:last-child{
                             margin-bottom: 0;
