--- a/src/scss/pages/home.scss
+++ b/src/scss/pages/home.scss
@@ -20,7 +20,7 @@
 
         .intro {
             margin-top: 2rem;
-            padding-left:8rem;
+            padding-left: 8rem;
 
             h1 {
                 font-weight: 800;
@@ -50,7 +50,7 @@
             text-align: center;
 
             .figure {
-                min-height: 550px;
+                min-height: 500px;
                 display: block;
                 background-size: cover;
                 background-repeat: no-repeat;
@@ -72,8 +72,18 @@
 }
 
 .slick-slider {
+    padding: 0 3rem;
+
     .slick-prev {
-        margin-top: -100px;
+        font-size: 0;
+        line-height: 0;
+        margin-top: -3rem;
+        background-color: transparent;
+        border: 0;
+        padding: 0;
+        @include translatey;
+        left: 0;
+        z-index: 999;
 
         &::before {
             content: 'keyboard_backspace';
@@ -83,11 +93,25 @@
             font-size: 2rem;
 
         }
+
+        &:hover {
+            &::before {
+                color: $color-blue;
+            }
+        }
     }
 
     .slick-next {
+        font-size: 0;
+        line-height: 0;
+        margin-top: -3rem;
+        background-color: transparent;
+        border: 0;
+        padding: 0;
+        @include translatey;
         @include rotated(rotate(180deg));
-        margin-top: -100px;
+        right: 0;
+        z-index: 999;
 
         &::before {
             content: 'keyboard_backspace';
@@ -96,6 +120,12 @@
             line-height: 1.5;
             font-size: 2rem;
 
+        }
+
+        &:hover {
+            &::before {
+                color: $color-blue;
+            }
         }
     }
 
@@ -143,12 +173,13 @@
 
 .glimps-counter {
     position: relative;
-    min-height: 768px;
+    min-height: 700px;
     @include flexvr;
-    background-position: 50% 100% !important;
+    background-color: darken($color-blue,15%);
+    background-position: 50% 50% !important;
 
     .overlay {
-        background-color: rgba($color-blue, .9);
+        background-color: rgba($color-blue, .6);
 
     }
 
@@ -162,7 +193,7 @@
             position: relative;
             color: $color-white;
             max-width: 524px;
-            margin: 0 auto 8rem auto;
+            margin: 0 auto 6rem auto;
 
 
         }
@@ -172,12 +203,17 @@
     .glimps-count {
         h4 {
             color: $color-white;
-            -webkit-text-fill-color: $color-blue;
+            -webkit-text-fill-color: transparent;
             /* Will override color (regardless of order) */
             -webkit-text-stroke-width: 1px;
             -webkit-text-stroke-color: $color-white;
             font-size: 3.5rem;
             font-weight: 800;
+            text-overflow: ellipsis;
+
+            /* Needed to make it work */
+            overflow: hidden;
+            white-space: nowrap;
         }
 
         h6 {
@@ -185,6 +221,21 @@
             font-size: 1rem;
             font-weight: 700;
         }
+
+        .odometer-value {
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
+            overflow: hidden;
+        }
+    }
+
+    p {
+        color: $color-white;
+        text-align: center;
+        max-width: 600px;
+        margin: 2rem auto 0 auto;
+        line-height: 1.8;
     }
 
     @media screen and (min-width:280px) {
@@ -237,10 +288,10 @@
     }
 
     .process-left {
-            position: sticky;
-            position: -webkit-sticky;
-            top: 0;
-            padding-right: 11rem;
+        position: sticky;
+        position: -webkit-sticky;
+        top: 4.5rem;
+        padding-right: 11rem;
 
         p {
             margin-top: 2rem;
@@ -255,7 +306,7 @@
 
             figure {
                 margin-bottom: 2rem;
-                @include boxshadow(0 15px 30px rgba(0,0,0,.16));
+                @include boxshadow(0 15px 30px rgba(0, 0, 0, .16));
             }
 
             h5 {
@@ -341,11 +392,12 @@
                     margin-top: 1.5rem;
                 }
             }
-            .intro{
+
+            .intro {
                 h1 {
                     font-size: 2.2rem;
                 }
-    
+
                 p {
                     margin: 1.5rem 0 0 0;
                 }
@@ -376,28 +428,6 @@
         .banner-content {
             .intro {
                 padding-left: 0;
-            }
-        }
-
-    }
-
-    .slick-slider {
-        .slick-prev {
-            margin-top: -100px;
-            left: 1rem;
-
-            &::before {
-                color: $color-blue;
-
-            }
-        }
-
-        .slick-next {
-            right: 1rem;
-
-            &::before {
-                color: $color-blue;
-
             }
         }
 
@@ -477,8 +507,10 @@
 
     .process {
         padding: 4rem 0;
-        .process-left{
-            padding-right: 0;;
+
+        .process-left {
+            padding-right: 0;
+            ;
         }
 
         .process-content {
@@ -511,7 +543,6 @@
 
                 figure {
                     margin-top: 0;
-                    max-width: 100px;
 
                     &:nth-child(2) {
                         margin: 0 1rem;
@@ -544,7 +575,7 @@
             .intro-item {
 
                 .figure {
-                    min-height: 300px;
+                    min-height: 250px;
                 }
 
                 h3 {
@@ -558,7 +589,7 @@
 
     .video-section {
         .video {
-            min-height: 300px;
+            min-height: 250px;
         }
 
         .video-content {
@@ -572,7 +603,7 @@
     }
 
     .glimps-counter {
-        min-height: 400px;
+        min-height: 100%;
 
         .glimps-wrapper {
             .openspace-title {
